--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "^13.0.0",
+    "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.1.3",
+    "classnames": "^2.3.2",
     "next": "13.0.0",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.0",
+    "react-redux": "^8.0.4",
+    "react-select": "^5.5.9",
+    "redux": "^4.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
