--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@hookform/resolvers": "^2.9.10",
-    "@next/font": "^13.0.0",
+    "@next/font": "^13.0.2",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "next": "13.0.0",
     "prettier": "^2.7.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.0",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.4",
     "react-select": "^5.5.9",
     "redux": "^4.2.0",
