--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@next/font": "^13.0.2",
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/react-datepicker": "^4.8.0",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "next": "13.0.0",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.39.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.4",
