--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-datepicker": "^4.8.0",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "css-loader": "^6.7.1",
     "next": "13.0.0",
     "prettier": "^2.7.1",
     "react": "18.2.0",
@@ -39,7 +40,8 @@
     "eslint-config-next": "13.0.0",
     "postcss": "^8.4.18",
     "sass": "^1.55.0",
-    "tailwindcss": "^3.2.1",
+    "scss": "^0.2.4",
+    "tailwindcss": "^3.2.2",
     "typescript": "4.8.4"
   }
 }
